Integrations/DAT/force-app/main/default/objects/DAT_Equipment_Map__mdt/DAT_Equipment_Map__mdt.object-meta.xml
<CustomObject>
    <label>DAT Equipment Map</label>
    <pluralLabel>DAT Equipment Maps</pluralLabel>
</CustomObject>