Integrations/DAT/force-app/main/default/objects/DAT_Equipment_Map__mdt/fields/DAT_Code__c.field-meta.xml
<CustomField>
    <fullName>DAT_Code__c</fullName>
    <label>DAT Equipment Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>