Integrations/DAT/force-app/main/default/objects/DAT_Equipment_Map__mdt/fields/FTM_Value__c.field-meta.xml
<CustomField>
    <fullName>FTM_Value__c</fullName>
    <label>FTM Required Trailer Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>